# Displayapplication-sec-learn

./: .gitmodules  CMakeLists.txt  README.md  configure_vtk.cmake  main.cpp
config/: ball_order_config.json  base_config.json
doc/: Interference.drawio  Konzept.docx  Training Cycle.drawio
src/config_loader/: config.cpp
src/windows/: rootwidget.cpp  segment.cpp
test/: test_config_loader.cpp
ui_elements/ui_files/: form.ui  rootwidget.ui  segment.ui
